@@ -30,7 +30,10 @@
  * miss certain functions or macro's we need. In this file, we try to take 
  * away most of these differences.
  *
- * $Id: telnet.h,v 1.9 2008/01/04 20:02:18 iamcamiel Exp $
+ * $Id: telnet.h,v 1.10 2008/02/20 19:16:19 iamcamiel Exp $
+ *
+ * X-1.10       Alex                                            20-FEB-2008
+ *      GNU compiler support on Windows.
  *
  * X-1.9        Camiel Vanderhoeven                             04-JAN-2008
  *      Comments.
@@ -67,13 +70,17 @@
 
 #if defined(_WIN32)
 #include <winsock2.h>
+#if defined(__GNUWIN32__)
+#include <ws2tcpip.h>
+#else  
 typedef size_t ssize_t;
 typedef int socklen_t;
-#endif
+#endif // __GNUWIN32__
+#endif // _WIN32
 
 #if defined(__APPLE__)
 #include <sys/socket.h>
-#endif
+#endif // __APPLE__
 
 #if defined(__VMS)
 #include <socket.h>
@@ -81,7 +88,7 @@ typedef int socklen_t;
 #include <inet.h>
 #define INVALID_SOCKET -1
 typedef unsigned int socklen_t;
-#endif
+#endif // __VMS
 
 #if defined(_WIN32) || defined(__VMS)
 
